src/objects/Xero_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>AccountCode__c</fullName>
        <label>AccountCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LineAmount__c</fullName>
        <label>LineAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxAmount__c</fullName>
        <label>TaxAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TaxType__c</fullName>
        <label>TaxType</label>
        <picklist>
            <picklistValues>
                <fullName>OUTPUT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>OUTPUT2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INPUT2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPEXINPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPEXOUTPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPEXINPUT2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAPEXOUTPUT2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECZRINPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ECZROUTPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXEMPTINPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EXEMPTOUTPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RRINPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RROUTPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SRINPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SROUTPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZERORATEDINPUT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ZERORATEDOUTPUT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UnitAmount__c</fullName>
        <label>UnitAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Xero_Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Xero Invoice</label>
        <referenceTo>Xero_Invoice__c</referenceTo>
        <relationshipLabel>Xero Line Items</relationshipLabel>
        <relationshipName>Xero_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Xero Line Item</label>
    <nameField>
        <label>Xero Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Xero Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>